# P2P-PS-STUN

./: HowToFakeNat.txt  README.md  UPNP_Discover.py  setup.drawio  workspace.code-workspace
Docker/: .env  docker-compose.yml
Docker/client/: Dockerfile
Docker/firewall/: Dockerfile
P2P_PS/: .gitignore  CMakeLists.txt  CMakeSettings.json
P2P_PS/sources/: CMakeLists.txt
P2P_PS/sources/client/: CMakeLists.txt
P2P_PS/sources/client/references/: client.cpp  tcp_p2p_con.cpp
P2P_PS/sources/client/src/: main.cpp
P2P_PS/sources/client/src/connection/: connection_i.h  i_connection_t.h  p2p_connector.h  p2p_ps_connector.h  port_manager.h  socket_i.h  udp_connection.h  udp_socket.h
P2P_PS/sources/common/: CMakeLists.txt  connection_types.h  event.h  log.cpp  log.h  messages.h  ministun.h  time_helper.h
P2P_PS/sources/server/: CMakeLists.txt
P2P_PS/sources/server/references/: server.cpp
P2P_PS/sources/server/src/: main.cpp  server.h  udp_p2p_server.h
Project/P2P_Client/: CMakeLists.txt  CMakeSettings.json
Project/P2P_Client/Client/: CMakeLists.txt  P2P.cpp
Project/P2P_Client/sources/: CMakeLists.txt
Project/P2P_Client/sources/client/: CMakeLists.txt
Project/P2P_Client/sources/client/src/: client.cpp
Project/P2P_Client/sources/server/: CMakeLists.txt
Project/P2P_Client/sources/server/src/: server.cpp  server.h
VM-Settings/Client/: client-setup.txt
VM-Settings/Firewall/: setup.txt  switch_nat_mode.sh
